--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "lint": "yarn -s lint-code && yarn -s lint-config",
+    "lint-code": "echo '\n✨  linting source code...\n' && prettier --write 'src/**/*'",
+    "lint-config": "echo '\n✨  linting config files...\n' && prettier --write '*.js' && echo ''",
+    "lint-staged": "pretty-quick --staged --pattern 'src/**/*.js' && pretty-quick --pattern '*.js'"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -15,6 +19,7 @@
     "dat.gui": "^0.7.6",
     "husky": "^3.0.9",
     "prettier": "^1.19.1",
+    "prettier-plugin-svelte": "^0.7.0",
     "pretty-quick": "^2.0.1",
     "rollup": "^1.27.0",
     "rollup-plugin-babel": "^4.3.3",
