--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "dat.gui": "^0.7.6",
     "husky": "^3.0.9",
@@ -28,12 +29,10 @@
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "sparticles": "^0.13.0",
+    "sparticles": "^0.14.0",
     "stats.js": "^0.17.0",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
-    "rollup-plugin-svelte-svg": "^0.2.1",
+    "svelte": "^3.0.0",
+    
     "rollup-plugin-svg": "^2.0.0",
     "sirv-cli": "^0.4.4"
   }
