--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "sparticles": "^0.14.0",
-    "stats.js": "^0.17.0",
-    "svelte": "^3.0.0",
-    
     "rollup-plugin-svg": "^2.0.0",
-    "sirv-cli": "^0.4.4"
+    "rollup-plugin-terser": "^5.1.2",
+    "sirv-cli": "^0.4.4",
+    "sparticles": "^1.0.0",
+    "stats.js": "^0.17.0",
+    "svelte": "^3.0.0"
   }
 }
