--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "sparticles": "^1.1.0",
     "stats.js": "^0.17.0",
     "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.19",
+    "serialize-javascript": "^3.1.0"
   }
 }
