--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "dat.gui": "^0.7.6",
     "husky": "^3.0.9",
+    "lodash": "^4.17.19",
     "prettier": "^1.19.1",
     "prettier-plugin-svelte": "^0.7.0",
     "pretty-quick": "^2.0.1",
@@ -30,13 +31,11 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^5.1.2",
+    "serialize-javascript": "^3.1.0",
     "sirv-cli": "^0.4.4",
     "sparticles": "^1.1.0",
     "stats.js": "^0.17.0",
     "svelte": "^3.0.0"
   },
-  "dependencies": {
-    "lodash": "^4.17.19",
-    "serialize-javascript": "^3.1.0"
-  }
+  "dependencies": {}
 }
